# metadata_tools

./: .gitignore  LICENSE  pyproject.toml  setup.py
datatools/: __init__.py
datatools/file_processing/: composite_template.py  flow.py  microscopy.py
datatools/helpers/: geo.py
datatools/repositories/: bioimage.py  immport.py  pubmed.py  redcap.py
datatools/utils/: uncat.py  utils.py  xml_helpers.py  zooma.py
dev/: zooma.ipynb
docs/: README.md
src/pubmed/: get_pub_data.ipynb  pubmed.ipynb  transform_pub_data.ipynb
